Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37597

InnoDB: Failing assertion: table->get_ref_count() == 0 in dict_sys_t::remove on UPDATE

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q4/2025 Server Maintenance

    Description

      --source include/have_innodb.inc
      CREATE TABLE t1 (c VARCHAR(4096) UNIQUE) ENGINE=InnoDB;
      CREATE GLOBAL TEMPORARY TABLE t2 LIKE t1;
      UPDATE t2 SET c=0;
      

      Leads to:

      MDEV-35915-2 CS 12.0.1 5d52514d536e9d141963f956408ac0efb4958a74 (Optimized, Clang 21.1.0-20250811) Build 06/09/2025

      InnoDB: Failing assertion: table->get_ref_count() == 0
      

      MDEV-35915-2 CS 12.0.1 5d52514d536e9d141963f956408ac0efb4958a74 (Optimized, Clang 21.1.0-20250811) Build 06/09/2025

      Core was generated by `/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-opt/bin/mariadbd --no-d'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 2724059)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #3  0x00007709dd44526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #4  0x00007709dd4288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x0000651e605b2d0f in ut_dbg_assertion_failed (expr=0x651e5f66eee6 "table->get_ref_count() == 0", file=0x651e5f5f325d "/test/bb-12.0-nikita-global-tmp_opt/storage/innobase/dict/dict0dict.cc", line=1832)at /test/bb-12.0-nikita-global-tmp_opt/storage/innobase/ut/ut0dbg.cc:60
      #6  0x0000651e60414f9d in dict_sys_t::remove (this=<optimized out>, table=0x7708b0041a88, lru=<optimized out>, keep=<optimized out>)at /test/bb-12.0-nikita-global-tmp_opt/storage/innobase/dict/dict0dict.cc:1911
      #7  0x0000651e603e54e5 in ha_innobase::delete_table (this=<optimized out>, name=<optimized out>)at /test/bb-12.0-nikita-global-tmp_opt/storage/innobase/handler/ha_innodb.cc:13547
      #8  0x0000651e5fd75b1a in hton_drop_table (hton=<optimized out>, path=0x7708b0057cf0 "/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-opt/tmp/#sql-temptable-2980bd-4-0")at /test/bb-12.0-nikita-global-tmp_opt/sql/handler.cc:578
      #9  0x0000651e60275c7c in THD::rm_temporary_table (this=<optimized out>, base=0x651e62b2bce8, path=0x7708b0057cf0 "/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-opt/tmp/#sql-temptable-2980bd-4-0")at /test/bb-12.0-nikita-global-tmp_opt/sql/temporary_tables.cc:841
      #10 0x0000651e6027351a in THD::free_tmp_table_share (this=this@entry=0x7708b0000c68, share=share@entry=0x7708b0057608, delete_table=<optimized out>)at /test/bb-12.0-nikita-global-tmp_opt/sql/temporary_tables.cc:1748
      #11 0x0000651e60275b85 in THD::drop_tmp_table_share (this=this@entry=0x7708b0000c68, table=table@entry=0x0, share=share@entry=0x7708b0057608, delete_table=true)at /test/bb-12.0-nikita-global-tmp_opt/sql/temporary_tables.cc:809
      #12 0x0000651e602765d6 in THD::commit_global_tmp_tables (this=0x7708b0000c68)at /test/bb-12.0-nikita-global-tmp_opt/sql/temporary_tables.cc:1480
      #13 0x0000651e5fd77c7c in commit_one_phase_2 (thd=thd@entry=0x7708b0000c68, all=false, trans=0x7708b00046f0, is_real_trans=true)at /test/bb-12.0-nikita-global-tmp_opt/sql/handler.cc:2245
      #14 0x0000651e5fd77654 in ha_commit_one_phase (thd=0x7708b0000c68, all=false)at /test/bb-12.0-nikita-global-tmp_opt/sql/handler.cc:2185
      #15 ha_commit_trans (thd=thd@entry=0x7708b0000c68, all=false)at /test/bb-12.0-nikita-global-tmp_opt/sql/handler.cc:1977
      #16 0x0000651e6019a19a in trans_commit_stmt (thd=thd@entry=0x7708b0000c68)at /test/bb-12.0-nikita-global-tmp_opt/sql/transaction.cc:498
      #17 0x0000651e6003a32e in mysql_execute_command (thd=thd@entry=0x7708b0000c68, is_called_from_prepared_stmt=<optimized out>)at /test/bb-12.0-nikita-global-tmp_opt/sql/sql_parse.cc:5949
      #18 0x0000651e600328d4 in mysql_parse (thd=thd@entry=0x7708b0000c68, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7709dc168420)at /test/bb-12.0-nikita-global-tmp_opt/sql/sql_parse.cc:7893
      #19 0x0000651e6003107d in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7708b0000c68, packet=packet@entry=0x7708b0008a69 "UPDATE t2 SET c=0", packet_length=packet_length@entry=17, blocking=true)at /test/bb-12.0-nikita-global-tmp_opt/sql/sql_parse.cc:1881
      #20 0x0000651e60032d51 in do_command (thd=thd@entry=0x7708b0000c68, blocking=true) at /test/bb-12.0-nikita-global-tmp_opt/sql/sql_parse.cc:1420
      #21 0x0000651e6018827d in do_handle_one_connection (connect=<optimized out>, connect@entry=0x651e63400a68, put_in_cache=true)at /test/bb-12.0-nikita-global-tmp_opt/sql/sql_connect.cc:1414
      #22 0x0000651e6018803f in handle_one_connection (arg=arg@entry=0x651e63400a68)at /test/bb-12.0-nikita-global-tmp_opt/sql/sql_connect.cc:1326
      #23 0x0000651e603467e9 in pfs_spawn_thread (arg=0x651e633b06f8)at /test/bb-12.0-nikita-global-tmp_opt/storage/perfschema/pfs.cc:2198
      #24 0x00007709dd49ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #25 0x00007709dd529c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      MDEV-35915-2 CS 12.0.1 f88831afe2e18d124dfeaaf15ac51725a319b8e2 (Debug, Clang 21.1.0-20250811) Build 06/09/2025

      InnoDB: Failing assertion: table->get_ref_count() == 0
      

      MDEV-35915-2 CS 12.0.1 f88831afe2e18d124dfeaaf15ac51725a319b8e2 (Debug, Clang 21.1.0-20250811) Build 06/09/2025

      Core was generated by `/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-dbg/bin/mariadbd --no-d'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 2754973)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #3  0x000079e2f6a4526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #4  0x000079e2f6a288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x00005a76497bd6cd in ut_dbg_assertion_failed (expr=0x5a764833833d "table->get_ref_count() == 0", file=0x5a7648220551 "/test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/dict/dict0dict.cc", line=1832)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/ut/ut0dbg.cc:60
      #6  0x00005a7649404895 in dict_sys_t::remove (this=0x5a7649ccc700 <dict_sys>, table=0x79e1a8052a58, lru=false, keep=false)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/dict/dict0dict.cc:1832
      #7  0x00005a76493a4959 in ha_innobase::delete_table (this=0x79e1a801d638, name=0x79e1a80618d0 "/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-29fe23-4-0")at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:13547
      #8  0x00005a7648a72e1c in hton_drop_table (hton=0x5a764c1b2588, path=0x79e1a80618d0 "/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-29fe23-4-0")at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:578
      #9  0x00005a76491ef608 in THD::rm_temporary_table (this=0x79e1a8000d58, base=0x5a764c1b2588, path=0x79e1a80618d0 "/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-29fe23-4-0")at /test/bb-12.0-nikita-global-tmp_dbg/sql/temporary_tables.cc:841
      #10 0x00005a76491ecf6d in THD::free_tmp_table_share (this=0x79e1a8000d58, share=0x79e1a8061068, delete_table=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/temporary_tables.cc:1748
      #11 0x00005a76491ef505 in THD::drop_tmp_table_share (this=0x79e1a8000d58, table=0x0, share=0x79e1a8061068, delete_table=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/temporary_tables.cc:809
      #12 0x00005a76491f0133 in THD::commit_global_tmp_tables (this=0x79e1a8000d58)at /test/bb-12.0-nikita-global-tmp_dbg/sql/temporary_tables.cc:1480
      #13 0x00005a76491f0794 in commit_global_tmp_table (thd=0x79e1a8000d58, all=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/temporary_tables.cc:1892
      #14 0x00005a7648a76706 in commit_one_phase_2 (thd=0x79e1a8000d58, all=false, trans=0x79e1a80049a8, is_real_trans=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:2245
      #15 0x00005a7648a76d45 in ha_commit_one_phase (thd=0x79e1a8000d58, all=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:2185
      #16 0x00005a7648a7553b in ha_commit_trans (thd=0x79e1a8000d58, all=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:1977
      #17 0x00005a76490ba21d in trans_commit_stmt (thd=0x79e1a8000d58)at /test/bb-12.0-nikita-global-tmp_dbg/sql/transaction.cc:498
      #18 0x00005a7648ebaf91 in mysql_execute_command (thd=0x79e1a8000d58, is_called_from_prepared_stmt=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:5949
      #19 0x00005a7648eabea8 in mysql_parse (thd=0x79e1a8000d58, rawbuf=0x79e1a8019ef0 "UPDATE t2 SET c=0", length=17, parser_state=0x79e2effb2a10)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:7893
      #20 0x00005a7648ea9689 in dispatch_command (command=COM_QUERY, thd=0x79e1a8000d58, packet=0x79e1a800b269 "UPDATE t2 SET c=0", packet_length=17, blocking=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:1881
      #21 0x00005a7648eac92a in do_command (thd=0x79e1a8000d58, blocking=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:1420
      #22 0x00005a764909dc1e in do_handle_one_connection (connect=0x5a764c87f028, put_in_cache=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_connect.cc:1414
      #23 0x00005a764909da01 in handle_one_connection (arg=0x5a764c7a77b8)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_connect.cc:1326
      #24 0x000079e2f6a9ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #25 0x000079e2f6b29c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: