MDEV-37597 InnoDB: Failing assertion: table->get_ref_count() == 0 on UPDATE

close_thread_tables is called *after* ending the transaction. There is
one case when it is important - it is lookup_handler, which holds the
reference released on ha_reset(). We could just call the latter, but
better to attempt a more wholesome initialization.

Fix: call mark_tmp_table_as_free_for_reuse on trx end.